<resources>
    <string name="app_name">DelStat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="delstat_icon">DelStat icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_masuk">Masuk</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_password_question">Lupa Password?</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="register">Register</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="hasil_kuis">Hasil Kuis</string>
    <string name="logout">Logout</string>
    <string name="jenjang">Jenjang</string>
    <string name="data_anda">Data Anda</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="nama">Nama</string>
    <string name="message_not_login">Oops, sepertinya Anda belum login</string>
    <string name="edit_password">Edit Password</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="password_saat_ini">Password saat ini</string>
    <string name="password_baru">Password baru</string>
    <string name="request_analisis_data">Request</string>
    <string name="judul_analisis_data">Judul</string>
    <string name="deskripsi_analisis_data">Deskripsi</string>
    <string name="pilih_file_analisis_data">Pilih File</string>
    <string name="submit_analisis_data">Submit</string>
    <string name="desc_button_file_analisis_data">File Analisis Data</string>
    <string name="button_edit_analisisdata">Edit</string>
    <string name="button_cancel_analisisdata">Batalkan</string>
    <string name="request_dikirimkan_oleh_analisis_data">Request dikirimkan oleh</string>
    <string name="konsep_peluang">Konsep Peluang</string>
    <string name="variabel_acak">Variabel Acak</string>
    <string name="distribusi_probabilitas_diskrit">Beberapa Distribusi Probabilitas Diskrit</string>
    <string name="distribusi_probabilitas_kontinu">Beberapa Distribusi Probabilitas Kontinu</string>
    <string name="pengantar_statistik_dan_analisis_data">Pengantar Statistik dan Analisis Data</string>
    <string name="teknik_sampling">Teknik Sampling</string>
    <string name="anova">Rancangan Percobaan (ANOVA)</string>
    <string name="konsep_estimasi">Konsep Estimasi</string>
    <string name="pengujian_hipotesis">Pengujian Hipotesis</string>
    <string name="regresi_linear_sederhana_dan_korelasi">Regresi Linear Sederhana dan Korelasi</string>
    <string name="tambah">Tambah</string>
    <string name="tambah_literatur">Tambah Literatur</string>
    <string name="judul_literatur">Judul</string>
    <string name="penulis_literatur">Penulis</string>
    <string name="tahun_terbit_literatur">Tahun Terbit</string>
    <string name="tags_literatur">Tags</string>
    <string name="desc_file_literatur">File Literatur</string>
    <string name="desc_change_file_literatur">Klik di sini, jika inign mengganti file</string>
    <string name="button_edit_literatur">Edit</string>
    <string name="updated_at_literatur">Literatur diperbaharui oleh</string>
    <string name="created_at_literatur">Literatur dibuat oleh</string>
    <string name="pilih_file_literatur">Pilih File</string>
    <string name="chat_baru">Chat Baru</string>
    <string name="message_delivered">D</string>
    <string name="message_read">R</string>
    <string name="definisi_anova_1">Analisis of Varians adalah suatu metode analisis statistika yang termasuk ke dalam cabang statistika inferensi. ANOVA (Analisis of Varians) dapat digunakan untuk menganalisis pengaruh perlakuan dalam suatu percobaan.</string>
    <string name="definisi_anova_2">Misalnya: pengaruh dosis pupuk terhadap hasil panen, pengaruh algoritma terhadap kecepatan running program, pengaruh metode penjualan terhadap pendapatan, dll. Jika tabel ANOVA menghasilkan keputusan tolak H0 maka seharusnya dilakukan uji perbandingan sebagai uji lanjutan untuk mencari level perlakuan yang paling optimum</string>
    <string name="definisi_anova_3">Homogenitas/kesamaan ragam dan normalitas data adalah asumsi dalam ANOVA dan regresi.</string>
    <string name="penjelasan_one_way_anova"><![CDATA[Satu variabel dependen dari satu faktor dengan > 2 taraf Merupakan analisis untuk percobaan dengan Rancangan Acak Lengkap (RAL).]]></string>
    <string name="penjelasan_two_way_anova"><![CDATA[Satu variabel dependen dengan 2 faktor Pengembangan uji t-paired & merupakan analisis untuk percobaan dengan Rancangan Acak Kelompok (RAK).]]></string>
    <string name="penjelasan_konsep_peluang_ruang_sampel">Himpunan semua hasil (outcomes) yang mungkin dari suatu percobaan statistika. Hasil dalam ruang sampel disebut titik sampel.</string>
    <string name="penjelasan_konsep_peluang_kejadian">Himpunan bagian dari ruang sample.</string>
    <string name="penjelasan_konsep_peluang_komplemen">Semua unsur yang tidak termasuk dalam kejadian.</string>
    <string name="penjelasan_konsep_peluang_irisan">Semua unsur yang termasuk dalam A dan B.</string>
    <string name="penjelasan_konsep_peluang_gabungan">Semua unsur yang termasuk dalam A atau B.</string>
    <string name="penjelasan_konsep_peluang_permutasi">Suatu sususan yang dapat dibentuk dari satu kumpulan benda yang diambil sebagian atau seleuruhnya dengan memerhatikan urutannya.</string>
    <string name="penjelasan_konsep_peluang_kombinasi">Suatu sususan yang dapat dibentuk dari satu kumpulan benda yang diambil sebagian atau seleuruhnya dengan tidak memerhatikan urutannya.</string>
    <string name="penjelasan_konsep_peluang_peluang">Peluang suatu kejadian A adalah jumlah bobot semua titik sampel yang termasuk A.</string>
    <string name="penjelasan_konsep_peluang_peluang_bersyarat">Peluang bersyarat merupakan peluang terjadinya suatu kejadian setelah kejaian lain terjadi.</string>
    <string name="penjelasan_peubah_acak_definisi">Peubah acak merupakan suatu fungsi yang mengaitkan suatu bilangan real pada setiap unsur dalam ruang sampel.</string>
    <string name="penjelasan_peubah_acak_ruang_sampel_diskrit">Ruang sampel diskrit, merupakan ruang sampel yang mengandung titik yang berhingga banyanya atau sederetan anggota yang banyaknya sebanyak bilangan bulat.</string>
    <string name="penjelasan_peubah_acak_ruang_sampel_kontinu">-\tRuang sampel kontinu, merupakan ruang sampel yang mengandung titik yang tak berhingga banyaknya dan banyaknya sebanyak titik pada sepotong garis</string>
    <string name="penjelasan_peubah_acak_distribusi_diskrit">Distribusi kumulatif F(X) suatu peubah acak diskrit X dengan distribusi peluang f(x) dinyatakan oleh</string>
    <string name="penjelasan_peubah_acak_fungsi_peluang_kontinu">Fungsi f(x) adalah Fungsi padat peluang peubah acak kontiniu x yang didefenisikan di atas himpunan semua bilangan Real R, jika</string>
    <string name="penjelasan_peubah_acak_distribusi_kumulatif_peubah_acak_kontinu">F(x) suatu peubah acak kontinu X dengan fungsi padat f(x) dinyatakan oleh</string>
    <string name="penjelasan_peubah_acak_distribusi_empiris">Distribusi empiris merupakan distribusi sebaran data actual dari observasi atau eksperimen dengan pengelompokan dalam distribusi frekuensi.</string>
    <string name="penjelasan_peubah_acak_distribusi_peluang_diskrit">Himpunan pasangan terurut (x, f(x)) merupakan suatu fungsi peluang, fungsi massa peluang, atau distribusi peluang dari peubah acak dikrit X, untuk semua kemungkinan berikut:</string>
    <string name="penjelasan_distribusi_kontinu_definisi">Distribusi kontinu biasanya digunakan untuk menggambarkan variable yang diasumsikan tidak terbatas berkorespondensi pada titik-titik sebuah garis interval.</string>
    <string name="penjelasan_distribusi_kontinu_distribusi_uniform_kontinu">Suatu peubah acak x pada interval (a,b) dikatakan berdistribusi uniform kontinu jika nilai f(x) adalah tetap untuk tiap x dalam interval (a,b) dengan fungsi pdf (probability density function)</string>
    <string name="penjelasan_distribusi_kontinu_distribusi_normal">Distribusi normal dengan fungsi probabilitas ini kemudian akan menunjukkan variable atau penyebaran distribusi. Fungsi ini akan dibuktikan dengan grafik berbentuk lonceng yang memuncak dibagian tengah hingga melandai di kedua sisinya dengan nilai yang sifatnya setara.</string>
    <string name="penjelasan_distribusi_kontinu_distribusi_normal_2">Titik puncak adalah pada mean yang juga merupakan median dan modus. Luas total di bawah kurva adalah 1 (0,5 di sebelah kiri mean dan 0,5 ke kanan).</string>
    <string name="penjelasan_distribusi_kontinu_distribusi_normal_3">Menghitung luas daerah pada kurva sama dengan menghitung peluangnya yang dapat dilihat pada rumus berikut.</string>
    <string name="penjelasan_distribusi_kontinu_distribusi_gamma_eksponensial"><![CDATA[Distribusi Gamma adalah distriibusi fungsi padat yang disebut luas dalam bidang matematika. Perubah acak kontinu x berdistribusi gamma dengan parameter α dan β dengan α>0 dan β>0]]></string>
    <string name="penjelasan_distribusi_kontinu_distribusi_gamma_eksponensial_2">Distribusi eksponensial merupakan distrbusi gamma yang khusus dengan α = 1</string>
    <string name="penjelasan_konsep_estimasi_definisi">Estimasi merupakan suatu metode dimana kita dapat memperkirakan nilai Populasi dengan memakai nilai sampel. Misalnya rata-rata sampel digunakan untuk menaksir rata-rata pupolasi proporsi sampel untuk menaksir proporsi populasi (p), dan jumlah ciri tertentu sampel untuk menaksir jumlah ciri tertentu populasi.</string>
    <string name="penjelasan_konsep_estimasi_definisi_2">Teori inferensi statistika terdiri atas metode untuk menarik inferensi/kesimpulan mengenai populasi. Metode yang digunakan dalam menaksir parameter populasi adalah metode klasik dan metode bayes.</string>
    <string name="penjelasan_konsep_estimasi_estimasi_bayes_1">Dalam pendekatan klasik, penaksir atau fungsi keputusan hanya berdasarkan informasi dari n sampel yang diambil. Peluang yang dikaitkan dengan prior disebut peluang pribadi.</string>
    <string name="penjelasan_konsep_estimasi_estimasi_bayes_2">Distribusi awal (prior) merupakan distribusi yang menyatakan informasi dari parameter yang akan diduga. Distribusi akhir (posterior) merupakan distribusi gabungan sampel.</string>
    <string name="penjelasan_konsep_estimasi_estimasi_bayes_3">Metode penaksiran bayes menggunakan distribusi awal f(θ) bersama distribusi gabungan sampel f(x1,x2,…,xn ; θ)</string>
    <string name="penjelasan_konsep_estimasi_estimasi_bayes_4">Rataan distribusi panca f(θ| x1,x2,…,xn) dinyatakan dengan θ*, disebut taksiran bayes untuk θ.</string>
    <string name="penjelasan_konsep_estimasi_estimasi_bayes_5"><![CDATA[Selang a < θ < b akan disebut selang bayes (1 – α) 100% untuk θ, bila]]></string>
    <string name="message_chat_empty">Mulai chat baru sekarang</string>
    <string name="button_chat_analisisdata">Chat</string>
    <string name="penjelasan_regresi_korelasi_regresi_linier_sederhana">Regresi adalah model/persamaan yang menggambarkan hubungan antara variabel prediktor (independent) terhadap variabel respon (dependen). Dalam menggambarkan hubungan antara prediktor (X) dan respon (Y), kadang data membentuk pola tertentu. Model-model regresi, yaitu regresi linier sederhana (predictor hanya satu) dan regresi linier berganda/majemuk (predictor lebih dari satu).</string>
    <string name="penjelasan_regresi_korelasi_uji_anova">ANOVA digunakan untuk menguji hipotesis rata-rata lebih dari 2 populasi dengan konsep membandingkan ragam (uji F).</string>
    <string name="kirim_email_reset_password">Kirim Email Reset Password</string>
</resources>